manifests/backrest/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"backrest","namespace":"backrest"},"spec":{"ports":[{"name":"http","port":80,"targetPort":9898}],"selector":{"app":"backrest"}}}
    name: backrest
    namespace: backrest
  spec:
    clusterIP: 10.109.237.105
    clusterIPs:
    - 10.109.237.105
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9898
    selector:
      app: backrest
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
