manifests/backrest/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":80,"protocol":"HTTP","serviceName":"backrest:backrest","ingressName":"backrest:backrest","hostname":"backrest.35.241.255.137.nip.io","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600"},"name":"backrest","namespace":"backrest"},"spec":{"ingressClassName":"nginx","rules":[{"host":"backrest.35.241.255.137.nip.io","http":{"paths":[{"backend":{"service":{"name":"backrest","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
      nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    name: backrest
    namespace: backrest
  spec:
    ingressClassName: nginx
    rules:
    - host: backrest.35.241.255.137.nip.io
      http:
        paths:
        - backend:
            service:
              name: backrest
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 35.241.255.137
kind: List
metadata:
